Add negated filters.
The negated version of the filters was added and the documentation began
to be reorganized.

--- a/Documentation/TODO.adoc
+++ b/Documentation/TODO.adoc
@@ -4,7 +4,7 @@
 == 0.2.0
 
 * [ ] Implement filter `Type`.
-* [ ] Add negated filters.
+* [x] Add negated filters.
 * [ ] Add variables.
 
 * [x] Add actions:
