Implemented the filter Type.
The filter Type was implemented, this filter uses MIME Types to
determine the type of file.

Added more documentation.

--- a/Documentation/Configuration/filters.adoc
+++ b/Documentation/Configuration/filters.adoc
@@ -26,4 +26,40 @@ But, not with:
 ====
 
 ==== Glob
+This accepts the files that match the specified _glob_.
+
+.Syntax of Glob (from Go Documentation)
+....
+{ term }
+
+term:
+  '*'         matches any sequence of non-Separator characters
+  '?'         matches any single non-Separator character
+  '[' [ '^' ] { character-range } ']'
+              character class (must be non-empty)
+  c           matches character c (c != '*', '?', '\\', '[')
+  '\\' c      matches character c
+
+character-range:
+  c           matches character c (c != '\\', '-', ']')
+  '\\' c      matches character c
+  lo '-' hi   matches character c for lo <= c <= hi
+....
+
+NOTE: We use the implementation offered by the Go programming language, which
+presents a peculiarity that makes the character `*` also coincides with the
+character `.` (dot).
+
+.Filter `Glob`
+====
+The instruction: `Glob: 'Image*'` matches with:
+
+* `Image`
+* `Image1`
+* `ImageAmazing`
+* `Image.png`
+* `ImageAny.svg`
+====
+
+==== Pattern
 // TODO: Add description.
